# vtolbook

./: .gitignore  LICENSE  README.md
airsim/: helloDrone.py  settings.json  spawn_test.py  test_dynamics.py  test_jakes_controller.py
quadrotorsim/: README.md
splines/: bspline_planner.py  third_order_trajectory.py
textbook/: README.md  contributors.tex  library_Beard.bib  library_Jackson.bib  macros.tex  refs_tmp.bib  (+5 more)
vtolsim/trajectorygenerator/: CMakeLists.txt  LICENSE  README.md  package.xml
vtolsim/trajectorygenerator/launch/: bspline_traj_generator.launch  sinusoid_traj_generator.launch  spline_traj_generator.launch
vtolsim/trajectorygenerator/params/: bspline_traj.yaml  sinusoid_traj.yaml  spline_traj.yaml
vtolsim/trajectorygenerator/scripts/: bspline_traj_node.py  bspline_trajectory_generator.py  bspline_trajectory_member.py  linear_trajectory_member.py  polynomial_example.py  polynomial_trajectory_generator.py  polynomial_trajectory_member.py  preview_spline_traj_params_example.py  quadratic_trajectory_member.py  quadrotor_sinusoid_example.py  sinusoid_traj_node.py  sinusoidal_trajectory_member.py  spline_traj_node.py  trajectory.py  trajectory_member.py  trajectory_plotter.py
vtolsim/trajectorygenerator/scripts/basis/: basis_member.py  standard_basis_member.py
vtolsim/trajectorygenerator/scripts/tests/: test_bspline_trajectory_generator.py  test_bspline_trajectory_member.py  test_polynomial_trajectory_generator.py  test_polynomial_trajectory_member.py  test_standard_basis_member.py
vtolsim/trajectorygenerator/scripts/utils/: math_tools.py
(+388 files in other folders)
