<?xml version="1.0"?>
<package format="3">
  <name>trajectorygenerator</name>
  <version>0.0.0</version>
  <description>The trajectorygenerator package</description>

  <maintainer email="willisj2@byu.edu">Jacob Willis</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <export>

  </export>
</package>
